Fixed vgc packer (output file close)